update lp notebook

--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Linear and Integer Programming Breakout Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "If you don't have cvxpy, you should run the following block. It may take a few minutes.  Make sure you did `conda activate vrdi` or the equivalent before starting up Jupyter.\n",
@@ -16,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# conda install cvxpy\n",
     "import sys\n",
     "!conda config --add channels oxfordcontrol\n",
     "!conda install -c conda-forge lapack --yes\n",
@@ -45,6 +53,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Diet Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start by creating our variables and writing down the objective function:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -60,8 +82,22 @@
     "     9*x[3] + \n",
     "    20*x[4] +\n",
     "    19*x[5]\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...and add the constraints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "constraints = [\n",
     "    (110*x[0] + 205*x[1] + 160*x[2] + 160*x[3] + 420*x[4] + 260*x[5] >= 2000),\n",
     "    (4*x[0] + 32*x[1] + 13*x[2] + 8*x[3] + 4*x[4]  + 14*x[5] >= 55),\n",
@@ -72,17 +108,14 @@
     "    (0 <= x[3]), (x[3] <= 8),\n",
     "    (0 <= x[4]), (x[4] <= 2),\n",
     "    (0 <= x[5]), (x[5] <= 2)\n",
-    "]\n",
-    "\n",
-    "\n",
-    "prob = cp.Problem(objective,constraints)\n",
-    "prob.solve()\n",
-    "\n",
-    "# Print result.\n",
-    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
-    "print(\"A solution x is \\n{}\".format(np.round_(x.value,3)))\n",
-    "\n",
-    "\n"
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem is to optimize `objective` subject to `constraints`, and `cvxpy` can solve this problem!"
    ]
   },
   {
@@ -90,7 +123,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prob = cp.Problem(objective,constraints)\n",
+    "prob.solve()\n",
+    "\n",
+    "# Print result.\n",
+    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
+    "print(\"A solution x is \\n{}\".format(np.round_(x.value,3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shortest s-t Path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's going to be convenient to represent the graph as a collection of triples `(u,v,w)` where `u,v` is an arc in the graph and `w` is the weight of the arc."
+   ]
   },
   {
    "cell_type": "code",
@@ -98,16 +152,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Attempt number one for shortest s-t path\n",
-    "# this one finds the minimum cost to send one unit\n",
-    "# of flow from s to t\n",
     "\n",
     "\n",
-    "# the objective is to minimize the total weights\n",
-    "# of the edges carrying flow\n",
-    "# subject to the constraints that one unit must \n",
-    "# leave s, one unit must arrive at t, and \n",
-    "# the net flow at all other vertices is zero\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "edges = [\n",
@@ -126,68 +175,14 @@
     "\n",
     "# we need a binary variable for each edge\n",
     "#x_e = cp.Variable(len(edges), integer=True)\n",
-    "x_e = cp.Variable(len(edges))\n",
-    "\n",
-    "\n",
-    "# constraints\n",
-    "constraints = []\n",
-    "# variables positive\n",
-    "constraints += [(x_e >= 0)]\n",
-    "\n",
-    "\n",
-    "# for each node u, the total value of the xs leaving \n",
-    "# it minus the total value of the xs into it should be\n",
-    "# 1 if u is the source, -1 if u is the destination, and 0 otherwise\n",
-    "\n",
-    "# one unit leaving the source (u=1)\n",
-    "constraints += [(x_e[0] + x_e[1] + x_e[2] == 1)]\n",
-    "\n",
-    "# one unit entering the sink (u=8)\n",
-    "constraints += [(-x_e[8] - x_e[10] == -1)]\n",
-    "\n",
-    "# u=2\n",
-    "constraints += [(x_e[0] - x_e[3]) == 0]\n",
-    "\n",
-    "\n",
-    "# u=3\n",
-    "constraints += [(x_e[1] - x_e[4]) - x_e[5] == 0]\n",
-    "\n",
-    "# u=4\n",
-    "constraints += [(x_e[2] - x_e[6]) == 0]\n",
-    "\n",
-    "# u=5\n",
-    "constraints += [(x_e[4] + x_e[6]) - x_e[7] == 0]\n",
-    "\n",
-    "# u=5\n",
-    "constraints += [(x_e[4] + x_e[6]) - x_e[7] == 0]\n",
-    "\n",
-    "# u=6\n",
-    "constraints += [(x_e[7] + x_e[9]) - x_e[8] == 0]\n",
-    "\n",
-    "# u=7\n",
-    "constraints += [(x_e[5] - x_e[9]) - x_e[10] == 0]\n",
-    "\n",
-    "\n",
-    "\n",
-    "wts = np.array([e[2] for e in edges])\n",
-    "\n",
-    "objective = cp.Minimize( wts.T @ x_e)\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"solving\")\n",
-    "tic = time.time()\n",
-    "prob = cp.Problem(objective,constraints)\n",
-    "prob.solve()\n",
-    "\n",
-    "# Print result.\n",
-    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
-    "print(\"A solution x is \\n {}\".format(np.round_(x_e.value,3)))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "x_e = cp.Variable(len(edges), integer = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objective is to minimize the total weights of the edges carrying flow..."
    ]
   },
   {
@@ -196,16 +191,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is the second attempt, and is actually the dual \n",
-    "# of the previous one.\n",
+    "wts = np.array([e[2] for e in edges])\n",
     "\n",
-    "# the objective is to maximize the total distance \n",
-    "# that we can pull t from s subject to the constraints\n",
-    "# that the distances between pairs of vertices \n",
-    "# follow a triangle inequality with respect to the \n",
-    "# edge weights\n",
+    "objective = cp.Minimize( wts.T @ x_e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...subject to the constraints that one unit must leave s, one unit must arrive at t, and the net flow at all other vertices is zero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each node u, the total value of the flow leaving \n",
+    "# it minus the total value of the flow into it should be\n",
+    "# 1 if u is the source, -1 if u is the destination, and 0 otherwise\n",
     "\n",
     "\n",
+    "# constraints\n",
+    "constraints = []\n",
+    "# variables positive\n",
+    "constraints += [(x_e >= 0)]\n",
+    "\n",
+    "# one unit leaving the source (u=1)\n",
+    "constraints += [(x_e[0] + x_e[1] + x_e[2] == 1)]\n",
+    "\n",
+    "# one unit entering the sink (u=8)\n",
+    "constraints += [(-x_e[8] - x_e[10] == -1)]\n",
+    "\n",
+    "# and an inscrutible list comprehension\n",
+    "constraints += [(sum([x_e[j] for j in range(11) if edges[j][1] == v]) + \n",
+    "                 cp.sum([-x_e[j] for j in range(11) if edges[j][0] == v]) == 0 ) \n",
+    "                for v in range(2,8)]\n",
+    "\n",
+    "\n",
+    "## this is the same, more readable, more lines\n",
+    "\n",
+    "# # one unit leaving the source (u=1)\n",
+    "# constraints += [(x_e[0] + x_e[1] + x_e[2] == 1)]\n",
+    "\n",
+    "# # one unit entering the sink (u=8)\n",
+    "# constraints += [(-x_e[8] - x_e[10] == -1)]\n",
+    "\n",
+    "# # u=2\n",
+    "# constraints += [(x_e[0] - x_e[3]) == 0]\n",
+    "\n",
+    "# # u=3\n",
+    "# constraints += [(x_e[1] + x_e[3] - x_e[4]) - x_e[5] == 0]\n",
+    "\n",
+    "# # u=4\n",
+    "# constraints += [(x_e[2] - x_e[6]) == 0]\n",
+    "\n",
+    "# # u=5\n",
+    "# constraints += [(x_e[4] + x_e[6]) - x_e[7] == 0]\n",
+    "\n",
+    "# # u=5\n",
+    "# constraints += [(x_e[4] + x_e[6]) - x_e[7] == 0]\n",
+    "\n",
+    "# # u=6\n",
+    "# constraints += [(x_e[7] + x_e[9]) - x_e[8] == 0]\n",
+    "\n",
+    "# # u=7\n",
+    "# constraints += [(x_e[5] - x_e[9]) - x_e[10] == 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's solve!  After you solve the Integer program, go back and remove the stipulation that the `Variable`s are integers and check that you get the same objective value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"solving\")\n",
+    "\n",
+    "prob = cp.Problem(objective,constraints)\n",
+    "prob.solve()\n",
+    "\n",
+    "# Print result.\n",
+    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
+    "print(\"A solution x is \\n {}\".format(np.round_(x_e.value,3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the second attempt, and is actually the dual of the previous one.\n",
+    "\n",
+    "The objective is to maximize the total distance that we can pull t from s..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "edges = [\n",
     "    (1,2,8),  #edges[0]\n",
     "    (1,3,15), #edges[1]\n",
@@ -220,38 +313,18 @@
     "    (7,8,18)  #edges[10]\n",
     "]\n",
     "\n",
-    "# we need a binary variable for each node\n",
     "\n",
+    "# a binary variable for each node\n",
+    "x_v = cp.Variable(8, integer = True)\n",
     "\n",
-    "#x_v = cp.Variable(8,integer = True )\n",
-    "x_v = cp.Variable(8)\n",
-    "\n",
-    "# constraints\n",
-    "constraints = []\n",
-    "\n",
-    "\n",
-    "constraints += [(x_v[0]) == 0]\n",
-    "\n",
-    "\n",
-    "for e in edges:\n",
-    "    constraints += [(x_v[e[1]-1] - x_v[e[0]-1]  <= e[2]  )]\n",
-    "\n",
-    "\n",
-    "\n",
-    "objective = cp.Maximize( x_v[7])\n",
-    "\n",
-    "\n",
-    "print(\"solving\")\n",
-    "tic = time.time()\n",
-    "prob = cp.Problem(objective,constraints)\n",
-    "prob.solve()\n",
-    "\n",
-    "# Print result.\n",
-    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
-    "print(\"A solution x is \\n {}\".format(np.round_(x_e.value,3)))\n",
-    "\n",
-    "\n",
-    "\n"
+    "objective = cp.Maximize( x_v[7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...subject to the constraints that the distances between pairs of vertices follow a triangle inequality with respect to the edge weights."
    ]
   },
   {
@@ -260,14 +333,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x_e.value)"
+    "# constraints\n",
+    "constraints = []\n",
+    "# s is distance 0 from itself\n",
+    "constraints += [(x_v[0]) == 0]\n",
+    "\n",
+    "# the distance from s to any vertex v is at most the distance to a \n",
+    "# predecessor u of v plus the length of the arc connecting u to v\n",
+    "for e in edges:\n",
+    "    constraints += [(x_v[e[1]-1] - x_v[e[0]-1]  <= e[2]  )]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's some demo code for the MA problem"
+    "And solve! Again, check that relaxing this to a linear, rather than integer, program gives the same objective value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"solving\")\n",
+    "tic = time.time()\n",
+    "prob = cp.Problem(objective,constraints)\n",
+    "prob.solve()\n",
+    "\n",
+    "# Print result.\n",
+    "print(\"\\nThe optimal value is {}\".format(np.round_(prob.value,3)))\n",
+    "print(\"A solution x is \\n {}\".format(np.round_(x_e.value,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Here's some demo code for the MA problem"
    ]
   },
   {
@@ -279,14 +390,12 @@
     "import geopandas as gpd\n",
     "from gerrychain.graph import Graph\n",
     "\n",
-    "\n",
     "# setup -- SLOW\n",
     "\n",
     "df = gpd.read_file(\"https://github.com/mggg-states/MA-shapefiles/raw/master/MA_no_islands_12_16.zip\")\n",
-    "\n",
-    "        \n",
+    "   \n",
     "graph = Graph.from_geodataframe(df, reproject=True,ignore_errors=True)\n",
-    "graph.add_data(df,list(df))\n"
+    "graph.add_data(df,list(df))"
    ]
   },
   {
@@ -295,7 +404,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "pops = [int(p) for p in list(nx.get_node_attributes(graph,\"Population\").values())]\n",
     "r_margin = [int(r.replace(\",\",\"\"))-int(d.replace(\",\",\"\")) for r,d in zip(list(nx.get_node_attributes(graph,\"SEN12R\").values()), \n",
     "                               list(nx.get_node_attributes(graph,\"SEN12D\").values()))]"
@@ -307,7 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "print(list(df))\n",
     "print(len(pops))"
    ]
@@ -416,36 +523,6 @@
     "print(r_margin.T @ d8.value)\n",
     "print(r_margin.T @ d9.value)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
