--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -225,13 +225,16 @@
     "# one unit entering the sink (u=8)\n",
     "constraints += [(-x_e[8] - x_e[10] == -1)]\n",
     "\n",
-    "# and an inscrutible list comprehension\n",
-    "constraints += [(sum([x_e[j] for j in range(11) if edges[j][1] == v]) + \n",
-    "                 cp.sum([-x_e[j] for j in range(11) if edges[j][0] == v]) == 0 ) \n",
+    "# the net flow at each other vertex is zero\n",
+    "constraints += [(cp.sum([ x_e[j] for j in range(11) if edges[j][0] == v]) + \n",
+    "                 cp.sum([-x_e[j] for j in range(11) if edges[j][1] == v]) == 0 ) \n",
     "                for v in range(2,8)]\n",
     "\n",
     "\n",
-    "## this is the same, more readable, more lines\n",
+    "\n",
+    "\n",
+    "\n",
+    "## this is the same set of constraints, more readable, more lines\n",
     "\n",
     "# # one unit leaving the source (u=1)\n",
     "# constraints += [(x_e[0] + x_e[1] + x_e[2] == 1)]\n",
