--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -33,17 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ECOS', 'ECOS_BB', 'GUROBI', 'OSQP', 'SCS']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "import numpy as np\n",
@@ -55,10 +47,7 @@
     "from itertools import chain, combinations\n",
     "\n",
     "import geopandas as gpd\n",
-    "from gerrychain.graph import Graph\n",
-    "\n",
-    "from cvxpy.reductions.solvers.defines import INSTALLED_SOLVERS\n",
-    "print(INSTALLED_SOLVERS)"
+    "from gerrychain.graph import Graph"
    ]
   },
   {
@@ -161,13 +150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "edges = [\n",
     "    (1,2,8),  #edges[0]\n",
     "    (1,3,15), #edges[1]\n",
@@ -478,18 +460,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/gerrychain/graph/adjacency.py:68: UserWarning: Found overlaps among the given polygons. Indices of overlaps: {(2146, 2151), (2129, 2131), (2106, 2107), (2154, 2155), (2037, 2038), (2140, 2141), (2067, 2074), (649, 2147), (2152, 2153), (2075, 2119), (2151, 2152), (2027, 2028)}\n",
-      "  overlaps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup -- SLOW\n",
     "\n",
@@ -501,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,20 +485,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solving\n",
-      "Academic license - for non-commercial use only\n",
-      "The optimal value is -33803\n",
-      "A solution is probably too big to print, but you can do it in the next block...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Boolean variables assigning units to districts\n",
     "district = cp.Variable(len(pops), boolean=True)\n",
