--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -35,6 +35,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### If the above doesn't work, use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install cvxpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Start with imports -- dont skip these!"
    ]
   },
@@ -558,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
