--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "\n",
     "\n",
-    "If you don't have cvxpy, you should run the following block. It may take a few minutes.  Make sure you did `conda activate vrdi` or the equivalent before starting up Jupyter.\n",
+    "### If you don't have cvxpy, you should run the following block. It may take a few minutes.  Make sure you did `conda activate vrdi` or the equivalent before starting up Jupyter.\n",
     "\n"
    ]
   },
