--- a/LP-IP_examples.ipynb
+++ b/LP-IP_examples.ipynb
@@ -471,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(district.value))"
+    "print(list(np.round_(district.value,3)))"
    ]
   },
   {
@@ -547,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(district.value))"
+    "print(list(np.round_(district.value,3)))"
    ]
   },
   {
